# pytest

./: Dockerfile  campeonato.py  efae.py  exclude.sh  login.json  main.py  mkdocs.md  mkdocs.yml  pyproject.toml  test_campeonato.py  varredura-push.sh
campeonato/: campeonato.py  test_campeonato.py
campeonato/mock/: mock.py
docs/: avisos.md  exclude.sh
docs/exclude/: readme.md
docs/frameworks/camomila/: amanha.md  hoje.md  testando.md
docs/frameworks/pelota/: amanha.md  guarda.md  pelota.md
fixando/carrinho/: carrinho.py
fixando/portaria/: portaria.py  test_portaria.py
fixando/tempo/: tempo.py  test_tempo.py
libs/camomila/: testando.py
libs/camomila/hoje/: hoje.py
libs/pelota/: pelota.py
libs/pelota/amanha/: amanha.py
libs/pelota/guarda/: guarda.py
semana/: semana.py  test_semana.py
test/: pytest.py
